<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_payment"
            android:icon="@drawable/icon_new_payment"
            android:title="@string/payment"/>
        <item
            android:id="@+id/nav_day_totals"
            android:icon="@drawable/icon_day_totals"
            android:title="@string/day_totals"/>
        <item
            android:id="@+id/nav_print_last_receipt"
            android:icon="@drawable/icon_print_last_receipt"
            android:title="@string/print_last_receipt"/>
        <item
            android:id="@+id/nav_refund"
            android:icon="@drawable/icon_refund"
            android:title="@string/refund"/>
        <item
            android:id="@+id/nav_request_info"
            android:icon="@drawable/icon_refund"
            android:title="@string/request_info"/>
    </group>
    <group
        android:id="@+id/nav_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cancel_payment"
            android:icon="@drawable/icon_cancel"
            android:title="@string/cancel_payment"
            android:enabled="true"/>
    </group>
</menu>